Implementar roles ADMIN/USER, registro, perfil y control de acceso por JWT